--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Jordan Salinas</title>
+</head>
+
+<body>
+  <div id="test"></div>
+  <script src="./scripts/test.js"></script>
+</body>
+</html>
