--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
 </head>
 
 <body>
-  <div id="test"></div>
+  <h2>Hey, I'm Jordan.</h2>
+  
+  <section>
+    <h3>About Me</h3>
+    <div>...</div>
+  </section>
+
+  <section>
+    <h3>Projects</h3>
+    <div>...</div>
+  </section>
+
   <script src="./scripts/test.js"></script>
 </body>
 </html>
