--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <head>
   <meta charset="utf-8">
   <title>Jordan Salinas</title>
+  <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 
 <body>
   <h2>Hey, I'm Jordan.</h2>
-  
+
   <section>
     <h3>About Me</h3>
     <div>...</div>
