--- a/index.html
+++ b/index.html
@@ -3,20 +3,37 @@
   <meta charset="utf-8">
   <title>Jordan Salinas</title>
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
+  <link rel="stylesheet" type="text/css" href="./styles/colors1.css">
+  <link rel="stylesheet" type="text/css" href="./styles/colors2.css">
 </head>
 
 <body>
-  <h2>Hey, I'm Jordan.</h2>
+  <header>
+    <h2>Hey, I'm Jordan.</h2>
+    <p>I do web development mainly on the frontend.</p>
+  </header>
 
   <section>
     <h3>About Me</h3>
-    <div>...</div>
+    <div>
+      ...
+    </div>
   </section>
 
   <section>
     <h3>Projects</h3>
     <div>...</div>
   </section>
+
+  <section>
+    <h3>Skills</h3>
+    <div>
+      Right at this moment I work with React.
+      We use web components and I'm pretty excited about them generally.
+    </div>
+  </section>
+
+  This is me on LinkedIn ...
 
   <script src="./scripts/test.js"></script>
 </body>
