--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
   <link rel="stylesheet" type="text/css" href="./styles/colors1.css">
   <link rel="stylesheet" type="text/css" href="./styles/colors2.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 </head>
 
 <body>
   <header>
+    <img src="./assets/me.jpg"/>
     <h2>Hey, I'm Jordan.</h2>
     <p>I do web development mainly on the frontend.</p>
   </header>
