--- a/index.html
+++ b/index.html
@@ -2,40 +2,33 @@
 <head>
   <meta charset="utf-8">
   <title>Jordan Salinas</title>
-  <link rel="stylesheet" type="text/css" href="./styles/main.css">
-  <link rel="stylesheet" type="text/css" href="./styles/colors1.css">
-  <link rel="stylesheet" type="text/css" href="./styles/colors2.css">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/colors1.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 </head>
 
 <body>
   <header>
-    <img src="./assets/me.jpg"/>
-    <h2>Hey, I'm Jordan.</h2>
-    <p>I do web development mainly on the frontend.</p>
+    <div class="page-width header-section">
+      <img class="my-image" src="./assets/images/me.jpg"/>
+      <div class="header-text">
+        <h1>Hey 👋, I'm Jordan! <a href="https://www.linkedin.com/in/jordan-salinas-9a0116113" target="_blank"><img class="linkedin-logo" src="./assets/images/linkedin-logo.png"/></a></h1>
+        <p>I've been a software developer now for about 9 years. I've worked on applications for web and mobile platforms using tech like React, React Native, Typescript, Node, Python, Mobx, CSS, and HTML to name a few.</p>
+      </div>
+    </div>
   </header>
 
-  <section>
-    <h3>About Me</h3>
-    <div>
-      ...
+  <section class="page-width">
+    <h2 class="section-title">Companies I've worked with</h3>
+    <div class="company-logos">
+      <img class="company-logo" src="./assets/images/gozova-logo.png"/>
+      <img class="company-logo" src="./assets/images/trivie-logo.png"/>
+      <img class="company-logo" src="./assets/images/dairy-com-logo.jpg"/>
+      <img class="company-logo" src="./assets/images/jp-morgan-chase-logo.png"/>
+      <img class="company-logo" src="./assets/images/misys-logo.png"/>
+      <img class="company-logo" src="./assets/images/apex-logo.webp"/>
     </div>
   </section>
-
-  <section>
-    <h3>Projects</h3>
-    <div>...</div>
-  </section>
-
-  <section>
-    <h3>Skills</h3>
-    <div>
-      Right at this moment I work with React.
-      We use web components and I'm pretty excited about them generally.
-    </div>
-  </section>
-
-  This is me on LinkedIn ...
 
   <script src="./scripts/test.js"></script>
 </body>
