--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="page-style">
     <div class="page-width header-section">
       <img class="my-image" src="./assets/images/me.jpg"/>
       <div class="header-text">
@@ -18,15 +18,45 @@
     </div>
   </header>
 
-  <section class="page-width">
+  <section class="page-style">
     <h2 class="section-title">Companies I've worked with</h3>
-    <div class="company-logos">
-      <img class="company-logo" src="./assets/images/gozova-logo.png"/>
-      <img class="company-logo" src="./assets/images/trivie-logo.png"/>
-      <img class="company-logo" src="./assets/images/dairy-com-logo.jpg"/>
-      <img class="company-logo" src="./assets/images/jp-morgan-chase-logo.png"/>
-      <img class="company-logo" src="./assets/images/misys-logo.png"/>
-      <img class="company-logo" src="./assets/images/apex-logo.webp"/>
+    <div class="logos">
+      <img class="logo" src="./assets/images/gozova-logo.png"/>
+      <img class="logo" src="./assets/images/trivie-logo.png"/>
+      <img class="logo" src="./assets/images/dairy-com-logo.jpg"/>
+      <img class="logo" src="./assets/images/jp-morgan-chase-logo.png"/>
+      <img class="logo" src="./assets/images/misys-logo.png"/>
+      <img class="logo" src="./assets/images/apex-logo.webp"/>
+    </div>
+  </section>
+
+  <section class="page-style">
+    <h2 class="section-title">Some technologies I know and love</h3>
+    <div class="logos">
+      <div class="tech-logo">
+        <img class="logo" src="./assets/images/react-logo.png"/>
+        <h4>React</h4>
+      </div>
+      <div class="tech-logo">
+        <img class="logo" src="./assets/images/ts-logo.svg"/>
+        <h4>Typescript</h4>
+      </div>
+      <div class="tech-logo">
+        <img class="logo" src="./assets/images/yarn-logo.webp"/>
+        <h4>Yarn</h4>
+      </div>
+      <div class="tech-logo">
+        <img class="logo" src="./assets/images/webpack-logo.png"/>
+        <h4>Webpack</h4>
+      </div>
+      <div class="tech-logo">
+        <img class="logo" src="./assets/images/css3-logo.png"/>
+        <h4>CSS3</h4>
+      </div>
+      <div class="tech-logo">
+        <img class="logo" src="./assets/images/mobx-logo.png"/>
+        <h4>Mobx</h4>
+      </div>
     </div>
   </section>
 
