--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
   <link rel="stylesheet" type="text/css" href="./assets/styles/colors1.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-42XE8DNX2E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-42XE8DNX2E');
+  </script>
 </head>
 
 <body>
@@ -60,6 +69,6 @@
     </div>
   </section>
 
-  <script src="./scripts/test.js"></script>
+  <script src="./assets/scripts/test.js"></script>
 </body>
 </html>
