--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
   <title>Jordan Salinas</title>
-  <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
   <link rel="stylesheet" type="text/css" href="./assets/styles/colors1.css">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-42XE8DNX2E"></script>
@@ -40,7 +40,7 @@
   </section>
 
   <section class="page-style">
-    <h2 class="section-title">Some technologies I know and love</h3>
+    <h2 class="section-title">Some of my favorite technologies</h3>
     <div class="logos">
       <div class="tech-logo">
         <img class="logo" src="./assets/images/react-logo.png"/>
